# Conway-s-Game-of-life

./: CMakeLists.txt  main.cpp  overview.md
Dependencies/: cell.cpp  cell.h  grid.cpp  grid.h  guiModel.cpp  guiModel.h
